fix: align dev card

--- a/src/stories/components/developer-card/developer-card.component.scss
+++ b/src/stories/components/developer-card/developer-card.component.scss
@@ -1,6 +1,7 @@
 @import 'index';
 :host {
   display: flex;
+  justify-content: space-around;
   flex-wrap: wrap;
 
   .team-card {
@@ -8,15 +9,15 @@
     @include flex(center, center, $direction: column);
     @include box-shadow(0px, 4px, 14px, 0, $black25);
 
-    margin-bottom: 10%;
+    margin-bottom: 2%;
 
     text-align: center;
     border-radius: 1rem;
     background: white;
 
     @media screen and (max-width: $lg) {
-      margin-right: 20px;
-      margin-left: 20px;
+      margin-right: 10px;
+      margin-left: 10px;
     }
 
     &__image {
